--- a/src/scss/cagov.font-only.scss
+++ b/src/scss/cagov.font-only.scss
@@ -2,10 +2,9 @@
 @import "cagov/mixins.scss";
 @import "cagov/icon-font.scss";
 
-
 select[data-class-icon] {
   font-size: 20px;
-  font-family: 'CaGov';
+  font-family: "CaGov";
   speak: none;
   font-style: normal;
   font-weight: normal;
