--- a/src/scss/colortheme/cs-executive-profile.scss
+++ b/src/scss/colortheme/cs-executive-profile.scss
@@ -3,16 +3,19 @@
    /source/scss/colortheme/cs-executive-profile.scss
 ----------------------------------------- */
 .executive-profile {
- background-color: $color-s1;
+  background-color: $color-s1;
 }
 .executive-profile.dark {
- .executive-profile-body {
-  border-left-color: $white;
- }
- p, .executive-name, a {
-  color: $white;
- }
-a:hover, a:focus {
- color: $color-p1;
-}
+  .executive-profile-body {
+    border-left-color: $white;
+  }
+  p,
+  .executive-name,
+  a {
+    color: $white;
+  }
+  a:hover,
+  a:focus {
+    color: $color-p1;
+  }
 }
