--- a/src/scss/colortheme/cs-global-header.scss
+++ b/src/scss/colortheme/cs-global-header.scss
@@ -3,26 +3,27 @@
    /source/scss/colortheme/cs-global-header.scss
 ----------------------------------------- */
 
-.utility-header { //beta 5.0 addition
-	background:$color-p2;
-    color:contrast($color-p2);
-	}
+.utility-header {
+  //beta 5.0 addition
+  background: $color-p2;
+  color: contrast($color-p2);
+}
 
 // Utility header setting buttons style when full width navigation with icon is used
 @media (max-width: $screen-xs-max) {
-    .nav-full-width-icons .settings-links .utility-links a, .nav-full-width-icons .settings-links .utility-links button {
-        border: 1px solid $color-p2; //primary color
-        color: $color-p2; //primary color
-    }
+  .nav-full-width-icons .settings-links .utility-links a,
+  .nav-full-width-icons .settings-links .utility-links button {
+    border: 1px solid $color-p2; //primary color
+    color: $color-p2; //primary color
+  }
 }
-    .global-header {
-        /* Default header pattern */
-        //background: $body-bg url("#{$theme-directory}/header-background.jpg") no-repeat 40% 40%;
-        /* Small screen gets solid color */
-        @media (max-width: $screen-xs-max) {
-            //background: $color-p3;              // Fallback color
-            //.rgba ($color-p3, .85);             // rgba function
-            //background: $rgba;                  // rgba value for modern browsers
-        }
-    }
-
+.global-header {
+  /* Default header pattern */
+  //background: $body-bg url("#{$theme-directory}/header-background.jpg") no-repeat 40% 40%;
+  /* Small screen gets solid color */
+  @media (max-width: $screen-xs-max) {
+    //background: $color-p3;              // Fallback color
+    //.rgba ($color-p3, .85);             // rgba function
+    //background: $rgba;                  // rgba value for modern browsers
+  }
+}
