--- a/src/scss/custom/homepage.css
+++ b/src/scss/custom/homepage.css
@@ -37,7 +37,7 @@
 }
 
 .partner-link:hover {
-  color: #EEF8FB !important;
+  color: #eef8fb !important;
 }
 
 @media (max-width: 575px) {
@@ -46,23 +46,25 @@
     line-height: 2.675rem;
     padding-top: 2rem;
   }
-  .header-primary-banner .row, .partner-with-us .row {
+  .header-primary-banner .row,
+  .partner-with-us .row {
     flex-direction: column-reverse;
   }
-  .header-primary-banner img, .partner-with-us svg {
+  .header-primary-banner img,
+  .partner-with-us svg {
     width: auto;
   }
 
   .col-sm-3 {
-   display: flex;
-   flex-direction: row;
-   flex-wrap: nowrap;
-   align-content: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: flex-start;
   }
 
   .dot-line::before,
   .dot-line::after {
-   display: none;
+    display: none;
   }
 
   .dot-line {
@@ -76,27 +78,26 @@
   }
 
   .dot-text {
-   position: relative;
-   margin-left: 0;
-   margin-top: 0;
-   margin-bottom: 0;
-   padding-left: 2rem;
-   border-left: 1px solid #ddd;
+    position: relative;
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 2rem;
+    border-left: 1px solid #ddd;
   }
 
   .dot-text h3 {
-   margin-top: 0;
+    margin-top: 0;
   }
 
   .dot-text::before {
-   display: none;
+    display: none;
   }
 
   .timeline-lines .col-sm-3:nth-last-of-type(2) .dot-text::before,
   .timeline-lines .col-sm-3:last-of-type .dot-text::before {
     background: #dddddd;
   }
-
 }
 
 @media (max-width: 767px) {
@@ -116,11 +117,10 @@
 }
 
 @media (min-width: 768px) {
- .p-r-lg-desktop {
-  padding-right: 3rem !important;
- }
- .p-l-lg-desktop {
-  padding-left: 3rem !important;
- }
- }
-
+  .p-r-lg-desktop {
+    padding-right: 3rem !important;
+  }
+  .p-l-lg-desktop {
+    padding-left: 3rem !important;
+  }
+}
