--- a/src/scss/colortheme/cs-blocks.scss
+++ b/src/scss/colortheme/cs-blocks.scss
@@ -5,32 +5,33 @@
 
 .bg-blue-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, lighten($color-p2, 20%), $color-p2); }
+  background-image: linear-gradient(225deg, lighten($color-p2, 20%), $color-p2);
+}
 
 .circle-icon {
-    background: $gray-darker;
+  background: $gray-darker;
 }
 
 .icon-link {
-    &:hover, &:focus {
-        color: $color-s1 !important;
-    }
+  &:hover,
+  &:focus {
+    color: $color-s1 !important;
+  }
 }
 
 // beta 5.0 addition
 .service-tile-empty {
-    background: #1c1d1e;
-    color: lighten($gray-base, 9%);
+  background: #1c1d1e;
+  color: lighten($gray-base, 9%);
 }
-
 
 // News Blocks
 .main-content {
-    a.color-gray-dark {
-        @include link-underline($text-color);
-    }
+  a.color-gray-dark {
+    @include link-underline($text-color);
+  }
 
-    a.color-primary-hover:hover {
-        @include link-underline($color-p2);
-    }
+  a.color-primary-hover:hover {
+    @include link-underline($color-p2);
+  }
 }
