--- a/src/scss/colortheme/cs-global.scss
+++ b/src/scss/colortheme/cs-global.scss
@@ -6,280 +6,293 @@
 /* ----- THEME COLORS -----  */
 .color-highlight,
 .color-p1 {
- color: $color-p1 !important;
+  color: $color-p1 !important;
 }
 
 .color-highlight-hover:hover,
 .color-highlight-hover:focus {
- color: lighten($color-p1, 7%) !important;
+  color: lighten($color-p1, 7%) !important;
 }
 
 .color-primary,
 .color-p2 {
- color: $color-p2;
+  color: $color-p2;
 }
 
 .color-primary-hover:hover,
 .color-primary-hover:focus {
- color: darken($color-p2, 7%) !important;
+  color: darken($color-p2, 7%) !important;
 }
 
 .color-standout,
 .color-p3 {
- color: $color-p3 !important;
+  color: $color-p3 !important;
 }
 
 .color-standout-hover:hover,
 .color-standout-hover:focus {
- color: darken($color-p3, 7%) !important;
+  color: darken($color-p3, 7%) !important;
 }
 
 /*  SECONDARY THEME COLORS	*/
 .color-s1 {
- color: $color-s1 !important;
+  color: $color-s1 !important;
 }
-.color-s1-hover:hover, .color-s1-hover:focus {
- color: $color-s1 !important;
+.color-s1-hover:hover,
+.color-s1-hover:focus {
+  color: $color-s1 !important;
 }
 
 .color-s2 {
- color: $color-s2 !important;
+  color: $color-s2 !important;
 }
-.color-s2-hover:hover, .color-s2-hover:focus {
- color: $color-s2 !important;
+.color-s2-hover:hover,
+.color-s2-hover:focus {
+  color: $color-s2 !important;
 }
 
 .color-s3 {
- color: $color-s3 !important;
+  color: $color-s3 !important;
 }
-.color-s3-hover:hover, .color-s3-hover:focus {
- color: $color-s3 !important;
+.color-s3-hover:hover,
+.color-s3-hover:focus {
+  color: $color-s3 !important;
 }
 
 /* background colors */
 
 .bg-highlight,
 .bg-p1 {
- background-color: $color-p1 !important;
+  background-color: $color-p1 !important;
 }
 
 .bg-highlight-hover:hover,
 .bg-highlight-hover:focus {
- background-color: lighten($color-p1, 7%) !important;
+  background-color: lighten($color-p1, 7%) !important;
 }
 
 .bg-primary,
 .bg-p2 {
- background-color: $color-p2 !important;
+  background-color: $color-p2 !important;
 }
 
 .bg-primary-hover:hover,
 .bg-primary-hover:focus {
- background-color: darken($color-p2, 7%) !important;
+  background-color: darken($color-p2, 7%) !important;
 }
 
 .bg-standout,
 .bg-p3 {
- background-color: $color-p3 !important;
+  background-color: $color-p3 !important;
 }
 
 .bg-standout-hover:hover,
 .bg-standout-hover:focus {
- background-color: darken($color-p3, 7%) !important;
+  background-color: darken($color-p3, 7%) !important;
 }
 
-.bg-s1, .bg-s1-hover:hover, .bg-s1-hover:focus {
- background-color: $color-s1 !important;
+.bg-s1,
+.bg-s1-hover:hover,
+.bg-s1-hover:focus {
+  background-color: $color-s1 !important;
 }
-.bg-s1-hover-color, .bg-s1-hover-color:hover, .bg-s1-hover-color:focus {
- background-color: darken($color-s1, 7%) !important;
-}
-
-.bg-s2, .bg-s2-hover:hover, .bg-s2-hover:focus {
- background-color: $color-s2 !important;
-}
-.bg-s2-hover-color, .bg-s2-hover-color:hover, .bg-s2-hover-color:focus {
- background-color: darken($color-s2, 7%) !important;
+.bg-s1-hover-color,
+.bg-s1-hover-color:hover,
+.bg-s1-hover-color:focus {
+  background-color: darken($color-s1, 7%) !important;
 }
 
-
-.bg-s3, .bg-s3-hover:hover, .bg-s3-hover:focus {
- background-color: $color-s3 !important;
+.bg-s2,
+.bg-s2-hover:hover,
+.bg-s2-hover:focus {
+  background-color: $color-s2 !important;
 }
-.bg-s3-hover-color, .bg-s3-hover-color:hover,.bg-s3-hover-color:focus {
- background-color: darken($color-s3, 7%) !important;
+.bg-s2-hover-color,
+.bg-s2-hover-color:hover,
+.bg-s2-hover-color:focus {
+  background-color: darken($color-s2, 7%) !important;
 }
 
+.bg-s3,
+.bg-s3-hover:hover,
+.bg-s3-hover:focus {
+  background-color: $color-s3 !important;
+}
+.bg-s3-hover-color,
+.bg-s3-hover-color:hover,
+.bg-s3-hover-color:focus {
+  background-color: darken($color-s3, 7%) !important;
+}
 
 .bg-primary-light {
- background-color: tint($color-p2, 60%) !important;
+  background-color: tint($color-p2, 60%) !important;
 }
 
 .bg-primary-light-hover:hover,
 .bg-primary-light-hover:focus {
- background-color: tint($color-p2, 60%) !important;
+  background-color: tint($color-p2, 60%) !important;
 }
 
 .bg-highlight-light {
- background-color: tint($color-p1, 50%) !important;
+  background-color: tint($color-p1, 50%) !important;
 }
 
 .bg-highlight-light-hover:hover,
 .bg-highlight-light-hover:focus {
- background-color: tint($color-p1, 50%) !important;
+  background-color: tint($color-p1, 50%) !important;
 }
 
 .bg-standout-light {
- background-color: tint($color-p3, 60%) !important;
+  background-color: tint($color-p3, 60%) !important;
 }
 
 .bg-standout-light-hover:hover,
 .bg-standout-light-hover:focus {
- background-color: tint($color-p3, 60%) !important;
+  background-color: tint($color-p3, 60%) !important;
 }
 
 .bg-secondary-light {
- background-color: tint($color-s3, 40%) !important;
+  background-color: tint($color-s3, 40%) !important;
 }
 
 .bg-secondary-light-hover:hover,
 .bg-secondary-light-hover:focus {
- background-color: tint($color-s3, 40%) !important;
+  background-color: tint($color-s3, 40%) !important;
 }
 
 // before after backgrounds
 .bg-secondary-before::before,
 .bg-secondary-after::after {
- background-color: $color-s3 !important;
+  background-color: $color-s3 !important;
 }
 
 .bg-highlight-before::before,
 .bg-highlight-after::after {
- background-color: $color-p1 !important;
+  background-color: $color-p1 !important;
 }
 
 .bg-standout-before::before,
 .bg-standout-after::after {
- background-color: $color-p3 !important;
+  background-color: $color-p3 !important;
 }
 
 .bg-primary-before::before,
 .bg-primary-after::after {
- background-color: $color-p2 !important;
+  background-color: $color-p2 !important;
 }
 
 /* border colors */
 .brd-primary {
- border-color: $color-p2 !important;
+  border-color: $color-p2 !important;
 }
 .brd-primary-light {
- border-color: tint($color-p2, 60%) !important;
+  border-color: tint($color-p2, 60%) !important;
 }
 .brd-primary-dark {
- border-color: darken($color-p2, 10%) !important;
+  border-color: darken($color-p2, 10%) !important;
 }
 .brd-standout {
- border-color: $color-p3 !important;
+  border-color: $color-p3 !important;
 }
 .brd-standout-light {
- border-color: tint($color-p3, 60%) !important;
+  border-color: tint($color-p3, 60%) !important;
 }
 .brd-standout-dark {
- border-color: darken($color-p3, 10%) !important;
+  border-color: darken($color-p3, 10%) !important;
 }
 .brd-highlight {
- border-color: $color-p1 !important;
+  border-color: $color-p1 !important;
 }
 .brd-highlight-light {
- border-color: tint($color-p1, 20%) !important;
+  border-color: tint($color-p1, 20%) !important;
 }
 .brd-highlight-dark {
- border-color: darken($color-p1, 10%) !important;
+  border-color: darken($color-p1, 10%) !important;
 }
 .brd-s1 {
- border-color: $color-s1 !important;
+  border-color: $color-s1 !important;
 }
 .brd-s2 {
- border-color: $color-s2 !important;
+  border-color: $color-s2 !important;
 }
 .brd-s3 {
- border-color: $color-s3 !important;
+  border-color: $color-s3 !important;
 }
 
 .brd-primary-light-before::before,
 .brd-primary-light-after::after {
- border-color: tint($color-p2, 60%) !important;
+  border-color: tint($color-p2, 60%) !important;
 }
 
 .brd-highlight-light-before::before,
 .brd-highlight-light-after::after {
- border-color: tint($color-p1, 50%) !important;
+  border-color: tint($color-p1, 50%) !important;
 }
 
 .brd-standout-light-before::before,
 .brd-standout-light-after::after {
- border-color: tint($color-p3, 60%) !important;
+  border-color: tint($color-p3, 60%) !important;
 }
 
 .brd-secondary-light-before::before,
 .brd-secondary-light-after::after {
- border-color: tint($color-s3, 40%) !important;
+  border-color: tint($color-s3, 40%) !important;
 }
 
 /* Underline colors */
 .underline-primary {
- background-image: linear-gradient(to right, $color-p2 50%, transparent 50%);
- background-repeat: repeat-x;
- background-size: 2px 1px;
- background-position: center bottom 4%;
- background-origin: padding-box;
- text-decoration: none !important;
+  background-image: linear-gradient(to right, $color-p2 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
+  background-position: center bottom 4%;
+  background-origin: padding-box;
+  text-decoration: none !important;
 }
 
 .underline-hover-primary:hover,
 .underline-hover-primary:focus {
- background-image: linear-gradient(to right, $color-p2 50%, transparent 50%);
- background-repeat: repeat-x;
- background-size: 2px 1px;
- background-position: center bottom 4%;
- background-origin: padding-box;
- text-decoration: none !important;
+  background-image: linear-gradient(to right, $color-p2 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
+  background-position: center bottom 4%;
+  background-origin: padding-box;
+  text-decoration: none !important;
 }
 
 .underline-highlight {
- background-image: linear-gradient(to right, $color-p1 50%, transparent 50%);
- background-repeat: repeat-x;
- background-size: 2px 1px;
- background-position: center bottom 4%;
- background-origin: padding-box;
- text-decoration: none !important;
+  background-image: linear-gradient(to right, $color-p1 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
+  background-position: center bottom 4%;
+  background-origin: padding-box;
+  text-decoration: none !important;
 }
 
 .underline-hover-highlight:hover,
 .underline-hover-highlight:focus {
- background-image: linear-gradient(to right, $color-p1 50%, transparent 50%);
- background-repeat: repeat-x;
- background-size: 2px 1px;
- background-position: center bottom 4%;
- background-origin: padding-box;
- text-decoration: none !important;
+  background-image: linear-gradient(to right, $color-p1 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
+  background-position: center bottom 4%;
+  background-origin: padding-box;
+  text-decoration: none !important;
 }
 
 .underline-standout {
- background-image: linear-gradient(to right, $color-p3 50%, transparent 50%);
- background-repeat: repeat-x;
- background-size: 2px 1px;
- background-position: center bottom 4%;
- background-origin: padding-box;
- text-decoration: none !important;
+  background-image: linear-gradient(to right, $color-p3 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
+  background-position: center bottom 4%;
+  background-origin: padding-box;
+  text-decoration: none !important;
 }
 
 .underline-hover-standout:hover,
 .underline-hover-standout:focus {
- background-image: linear-gradient(to right, $color-p3 50%, transparent 50%);
- background-repeat: repeat-x;
- background-size: 2px 1px;
- background-position: center bottom 4%;
- background-origin: padding-box;
- text-decoration: none !important;
+  background-image: linear-gradient(to right, $color-p3 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
+  background-position: center bottom 4%;
+  background-origin: padding-box;
+  text-decoration: none !important;
 }
