--- a/src/scss/colortheme/cs-image.scss
+++ b/src/scss/colortheme/cs-image.scss
@@ -3,38 +3,43 @@
    /source/scss/colortheme/cs-image.scss
 ----------------------------------------- */
 
-@mixin image-thumbnail($bg: $thumbnail-bg, $border: $thumbnail-border, $weight: $thumbnail-padding){
-    .img-thumbnail {
-        padding: $weight;
-        background-color: $bg;
-        border: 1px solid $border;
-    }
+@mixin image-thumbnail(
+  $bg: $thumbnail-bg,
+  $border: $thumbnail-border,
+  $weight: $thumbnail-padding
+) {
+  .img-thumbnail {
+    padding: $weight;
+    background-color: $bg;
+    border: 1px solid $border;
+  }
 }
 
-.section, .card {
-    
-    &-understated {
-        @include image-thumbnail($gray-lightest, darken($gray-lighter, 8%));
-    }
+.section,
+.card {
+  &-understated {
+    @include image-thumbnail($gray-lightest, darken($gray-lighter, 8%));
+  }
 
-    &-overstated {
-        @include image-thumbnail(tint($color-s3, 60%), darken($color-s3, 8%));
-    }
+  &-overstated {
+    @include image-thumbnail(tint($color-s3, 60%), darken($color-s3, 8%));
+  }
 
-    &-standout, &-impact {
-        //@include image-thumbnail($color-s2; $color-s2);
-        @include image-thumbnail(tint($color-p3, 40%), darken($color-p3, 8%));
-    }
-    
-    &-primary {
-        @include image-thumbnail(tint($color-p2, 70%), darken($color-p2, 10%));
-    }
+  &-standout,
+  &-impact {
+    //@include image-thumbnail($color-s2; $color-s2);
+    @include image-thumbnail(tint($color-p3, 40%), darken($color-p3, 8%));
+  }
 
-    &-inverted {
-        @include image-thumbnail($thumbnail-bg, darken($gray-lighter, 8%));
-    }
+  &-primary {
+    @include image-thumbnail(tint($color-p2, 70%), darken($color-p2, 10%));
+  }
 
-    &-danger {
-        @include image-thumbnail($thumbnail-bg, darken($gray-lighter, 8%));
-    }
+  &-inverted {
+    @include image-thumbnail($thumbnail-bg, darken($gray-lighter, 8%));
+  }
+
+  &-danger {
+    @include image-thumbnail($thumbnail-bg, darken($gray-lighter, 8%));
+  }
 }
