--- a/src/scss/colortheme/cs-panes.scss
+++ b/src/scss/colortheme/cs-panes.scss
@@ -3,95 +3,121 @@
    /source/scss/colortheme/cs-panes.scss
 ----------------------------------------- */
 
-
 // DESKTOP VERSION
 @media (min-width: $screen-sm-min) {
-    // Color arrow element based on pane's background
+  // Color arrow element based on pane's background
 
-    .bg-highlight.group-right:before, .bg-p1.group-right:before {
-        border-right-color: $color-p1;
+  .bg-highlight.group-right:before,
+  .bg-p1.group-right:before {
+    border-right-color: $color-p1;
+  }
+
+  .bg-highlight.group-left:after,
+  .bg-p1.group-left:after {
+    border-left-color: $color-p1;
+  }
+
+  .section-primary.group-right:before,
+  .bg-primary.group-right:before,
+  .bg-p2.group-right:before {
+    border-right-color: $color-p2;
+  }
+
+  .section-primary.group-left:after,
+  .bg-primary.group-left:after,
+  .bg-p2.group-left:after {
+    border-left-color: $color-p2;
+  }
+
+  .section-default {
+    &.group-right:before {
+      border-right-color: $gray-lightest;
     }
 
-    .bg-highlight.group-left:after, .bg-p1.group-left:after {
-        border-left-color: $color-p1;
+    &.group-left:after {
+      border-left-color: $gray-lightest;
+    }
+  }
+
+  .section-standout.group-right:before,
+  .bg-standout.group-right:before,
+  .bg-p3.group-right:before {
+    border-right-color: $color-p3;
+  }
+
+  .section-standout.group-left:after,
+  .bg-standout.group-left:after,
+  .bg-p3.group-left:after {
+    border-left-color: $color-p3;
+  }
+
+  .section-understated.group-right:before,
+  .bg-s1.group-right:before {
+    border-right-color: $color-s1;
+  }
+
+  .section-understated.group-left:after,
+  .bg-s1.group-left:after {
+    border-left-color: $color-s1;
+  }
+
+  .section-inverted {
+    &.group-right:before {
+      border-right-color: $gray-darker;
     }
 
-    .section-primary.group-right:before, .bg-primary.group-right:before, .bg-p2.group-right:before {
-        border-right-color: $color-p2;
+    &.group-left:after {
+      border-left-color: $gray-darker;
     }
-
-    .section-primary.group-left:after, .bg-primary.group-left:after, .bg-p2.group-left:after {
-        border-left-color: $color-p2;
-    }
-
-    .section-default {
-        &.group-right:before {
-            border-right-color: $gray-lightest;
-        }
-
-        &.group-left:after {
-            border-left-color: $gray-lightest;
-        }
-    }
-
-    .section-standout.group-right:before, .bg-standout.group-right:before, .bg-p3.group-right:before {
-        border-right-color: $color-p3;
-    }
-
-    .section-standout.group-left:after, .bg-standout.group-left:after, .bg-p3.group-left:after {
-        border-left-color: $color-p3;
-    }
-
-    .section-understated.group-right:before, .bg-s1.group-right:before {
-        border-right-color: $color-s1;
-    }
-
-    .section-understated.group-left:after, .bg-s1.group-left:after {
-        border-left-color: $color-s1;
-    }
-
-    .section-inverted {
-        &.group-right:before {
-            border-right-color: $gray-darker;
-        }
-
-        &.group-left:after {
-            border-left-color: $gray-darker;
-        }
-    }
+  }
 }
-
 
 // MOBILE VERSION
 @media (max-width: $screen-xs-max) {
-  
-   
-    // Color arrow element based on pane's background
-    .bg-highlight.group-right:before, .bg-p1.group-right:before, .bg-highlight.group-left:after, .bg-p1.group-left:after {
-        border-bottom-color: $color-p1;
-    }
+  // Color arrow element based on pane's background
+  .bg-highlight.group-right:before,
+  .bg-p1.group-right:before,
+  .bg-highlight.group-left:after,
+  .bg-p1.group-left:after {
+    border-bottom-color: $color-p1;
+  }
 
-    .section-primary.group-right:before, .bg-primary.group-right:before, .bg-p2.group-right:before, .section-primary.group-left:after, .bg-primary.group-left:after, .bg-p2.group-left:after {
-        border-bottom-color: $color-p2;
-    }
+  .section-primary.group-right:before,
+  .bg-primary.group-right:before,
+  .bg-p2.group-right:before,
+  .section-primary.group-left:after,
+  .bg-primary.group-left:after,
+  .bg-p2.group-left:after {
+    border-bottom-color: $color-p2;
+  }
 
-    .section-default {
-        &.group-right:before, &.group-left:after {
-            border-bottom-color: $gray-lightest;
-        }
+  .section-default {
+    &.group-right:before,
+    &.group-left:after {
+      border-bottom-color: $gray-lightest;
     }
+  }
 
-    .section-standout.group-right:before, .bg-standout.group-right:before, .bg-p3.group-right:before, .section-standout.group-left:after, .bg-standout.group-left:after, .bg-p3.group-left:after {
-        border-bottom-color: $color-p3;
-    }
+  .section-standout.group-right:before,
+  .bg-standout.group-right:before,
+  .bg-p3.group-right:before,
+  .section-standout.group-left:after,
+  .bg-standout.group-left:after,
+  .bg-p3.group-left:after {
+    border-bottom-color: $color-p3;
+  }
 
-    .section-understated.group-right:before, .bg-s1 .group-right:before, .section-understated.group-left:after, .bg-s1.group-left:after {
-        border-bottom-color: $color-s1;
-    }
+  .section-understated.group-right:before,
+  .bg-s1 .group-right:before,
+  .section-understated.group-left:after,
+  .bg-s1.group-left:after {
+    border-bottom-color: $color-s1;
+  }
 
-    .section-inverted {
-        &.group-right:before, &.group-left:after {
-            border-bottom-color: $gray-darker;
-        }
+  .section-inverted {
+    &.group-right:before,
+    &.group-left:after {
+      border-bottom-color: $gray-darker;
     }
+  }
 }
