--- a/src/scss/colortheme/sacramento.scss
+++ b/src/scss/colortheme/sacramento.scss
@@ -1,6 +1,3 @@
-
-
-
 /* -----------------------------------------
    SACRAMENTO
 ----------------------------------------- */
@@ -10,87 +7,86 @@
 // --------------------------------------------------
 
 // Theme directory
-$theme-directory:       "#{$template-path}/sacramento";      // Folder where assets for theme are stored
+$theme-directory: "#{$template-path}/sacramento"; // Folder where assets for theme are stored
 
 // Primary Theme colors
-$color-p1:              #7bb0da;     // Baby Blue
-$color-p2:              #153554;     // Dark Blue
-$color-p3:              #730000;     // Dark Red
+$color-p1: #7bb0da; // Baby Blue
+$color-p2: #153554; // Dark Blue
+$color-p3: #730000; // Dark Red
 
 // Secondary Theme colors
-$color-s1:              #E1ECF7;            // Lightest Blue
-$color-s2:              #c7d9ea;            // Lighter Blue
-$color-s3:              #9bb8d3;        	// Light Blue $brand-info
+$color-s1: #e1ecf7; // Lightest Blue
+$color-s2: #c7d9ea; // Lighter Blue
+$color-s3: #9bb8d3; // Light Blue $brand-info
 
 // Accent Colors
-$color-a1: #1B79C0; // Dark Blue
-$color-a2: #077CBB; // Med Blue
+$color-a1: #1b79c0; // Dark Blue
+$color-a2: #077cbb; // Med Blue
 $color-a3: #258378; // Teal
-$color-a4: #32852E; // Green $brand-success
+$color-a4: #32852e; // Green $brand-success
 $color-a5: #815ab4; // Purple
-$color-a6: #BE37CD; // Lavender
-$color-a7: #C93E2C; // Red $brand-danger
-$color-a8: #BB520C; // Orange $brand-warning
+$color-a6: #be37cd; // Lavender
+$color-a7: #c93e2c; // Red $brand-danger
+$color-a8: #bb520c; // Orange $brand-warning
 $color-a9: #f7e455; // Yellow
 
-$panel-border:        #ddd;
+$panel-border: #ddd;
 
 // Module or theme specific variables
-$nav-first-level:       $gray-light;    // Color of navigation links
-$nav-second-level:      $text-color;    // Second level link colors
-$off-canvas-links:      #fff;           // Off Canvas link color
-$search-accent:         $color-p1;      // Search field input hover border
-$nav-accent:            $color-p1;      // Link hover and nav bar bottom line
-$body-color:            #32608a;        // Background base and typically the page edge border
-$body-midline:          $color-s3;      // Midline gradient color
-$edge-border:           $body-color;    // Applied to outer edge of the page
-$header-icon:           $color-p2;      // Icon left of main content H1
-$mobile-controls:				$gray-600;		// Mobile controls
-$footer-txt:            #fff;           // Color of text and links in the footer
+$nav-first-level: $gray-light; // Color of navigation links
+$nav-second-level: $text-color; // Second level link colors
+$off-canvas-links: #fff; // Off Canvas link color
+$search-accent: $color-p1; // Search field input hover border
+$nav-accent: $color-p1; // Link hover and nav bar bottom line
+$body-color: #32608a; // Background base and typically the page edge border
+$body-midline: $color-s3; // Midline gradient color
+$edge-border: $body-color; // Applied to outer edge of the page
+$header-icon: $color-p2; // Icon left of main content H1
+$mobile-controls: $gray-600; // Mobile controls
+$footer-txt: #fff; // Color of text and links in the footer
 
-$overstated-header-bg:          $color-p2;      // Background for panel header
-$overstated-header-txt:         #fff;           // Panel header text color
-$overstated-header-icon:        #fff;           // Panel header text color
-$overstated-header-border:      $color-p2;     // Panel header bottom border color
-$overstated-border:             $panel-border;    // Border surrounding entire panel
-$overstated-body-bg:            #fff;           // Panel body background
+$overstated-header-bg: $color-p2; // Background for panel header
+$overstated-header-txt: #fff; // Panel header text color
+$overstated-header-icon: #fff; // Panel header text color
+$overstated-header-border: $color-p2; // Panel header bottom border color
+$overstated-border: $panel-border; // Border surrounding entire panel
+$overstated-body-bg: #fff; // Panel body background
 
-$panel-default-header-bg:       $panel-default-heading-bg;      // Background for panel header
-$panel-default-header-txt:      $text-color;        // Panel header text color
-$panel-default-header-icon:     $color-p2;      // Panel header icon color
-$panel-default-header-border:   $panel-border;     // Panel header bottom border color
-$panel-default-border:        	$panel-border;     // Border surrounding entire panel
-$panel-default-body-bg:         #fff;      // Panel body background
+$panel-default-header-bg: $panel-default-heading-bg; // Background for panel header
+$panel-default-header-txt: $text-color; // Panel header text color
+$panel-default-header-icon: $color-p2; // Panel header icon color
+$panel-default-header-border: $panel-border; // Panel header bottom border color
+$panel-default-border: $panel-border; // Border surrounding entire panel
+$panel-default-body-bg: #fff; // Panel body background
 
-$sidebar-default-header-bg:     $color-s2;      // Background for panel header
-$sidebar-default-header-txt:    $text-color;    // Panel header text color
-$sidebar-default-header-icon:   $color-p2;      // Panel header icon color
-$sidebar-default-header-border: $color-p2;      // Panel header bottom border color
-$sidebar-default-border:        $panel-border;     // Border surrounding entire panel
-$sidebar-default-body-bg:       #fff;           // Panel body background
+$sidebar-default-header-bg: $color-s2; // Background for panel header
+$sidebar-default-header-txt: $text-color; // Panel header text color
+$sidebar-default-header-icon: $color-p2; // Panel header icon color
+$sidebar-default-header-border: $color-p2; // Panel header bottom border color
+$sidebar-default-border: $panel-border; // Border surrounding entire panel
+$sidebar-default-body-bg: #fff; // Panel body background
 
-$understated-header-bg:         $color-s1;      // Background for panel header
-$understated-header-txt:        $text-color;    // Panel header text color
-$understated-header-icon:       $color-p2;      // Panel header icon color
-$understated-header-border:     $color-s1;          // Panel header bottom border color
-$understated-border:            $panel-border;          // Border surrounding entire panel
-$understated-body-bg:           #fff;           // Panel body background
+$understated-header-bg: $color-s1; // Background for panel header
+$understated-header-txt: $text-color; // Panel header text color
+$understated-header-icon: $color-p2; // Panel header icon color
+$understated-header-border: $color-s1; // Panel header bottom border color
+$understated-border: $panel-border; // Border surrounding entire panel
+$understated-body-bg: #fff; // Panel body background
 
+$standout-header-bg: $color-p3; // Background for panel header
+$standout-header-txt: #fff; // Panel header text color
+$standout-header-icon: $color-p1; // Panel header icon color
+$standout-header-border: $color-p3; // Panel header bottom border color
+$standout-border: $panel-border; // Border surrounding entire panel
+$standout-body-bg: #fff; // Panel body background
 
-$standout-header-bg:            $color-p3;      // Background for panel header
-$standout-header-txt:           #fff;           // Panel header text color
-$standout-header-icon:          $color-p1;      // Panel header icon color
-$standout-header-border:        $color-p3;      // Panel header bottom border color
-$standout-border:               $panel-border;   // Border surrounding entire panel
-$standout-body-bg:              #fff;           // Panel body background
-
-$figure-border:                 $color-s2;      // Border around media captions
-$figure-bg:                     $color-s1;      // Background behind figure and caption
+$figure-border: $color-s2; // Border around media captions
+$figure-bg: $color-s1; // Background behind figure and caption
 
 // MEGAMENU
-$sub-nav-bg:                    lighten($color-s1, 6%);
-$sub-nav-link-border:           $gray-lighter;
-$sub-nav-media-bg:              transparent;
+$sub-nav-bg: lighten($color-s1, 6%);
+$sub-nav-link-border: $gray-lighter;
+$sub-nav-media-bg: transparent;
 
 // SEARCH
 $expanded-background-color: $gray-lighter;
@@ -98,8 +94,3 @@ $text-field-color: rgba(255, 255, 255, 0.8); // 80% white
 
 // UTILITY
 $utility-link-hover-color: lighten($color-p1, 35%);
-
-
-
-
-
