--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -12,13 +12,7 @@
           applications
         </div>
         <div class="btn-row p-b">
-          <a href="/whats-new.html" class="btn btn-primary">Introducing V6</a>
-          <a
-            class="btn btn-primary"
-            href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/tree/6.1.0">
-            Download V6
-            <span class="ca-gov-icon-download-cloud"></span>
-          </a>
+          <a href="/download-and-setup.html" class="btn btn-primary">Download and setup</a>
         </div>
       </div>
       <div class="col my-auto">
