hotfix for primary banner

--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -1,18 +1,23 @@
-<div class="header-primary-banner hidden-print"
-	style="background-image: url('/images/main-banner.svg');">
-	<div class="container">
-		<div class="row my-4">
-			<div class="col my-auto">
-				<h1 class="color-white font-weight-600">State Template V6</h1>
-				<div class="color-white lead m-b-lg line-height-1-6em" style="max-width:22em;">Use the latest version of the template to develop your websites and applications</div>
-				<div class="btn-row p-b">
-					<a href="/whats-new.html" class="btn btn-primary">Introducing V6</a>
-					<a class="btn btn-primary" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/tree/6.1.0">Download V6  <span class="ca-gov-icon-download-cloud"></span></a>
-				</div>
-			</div>
-			<div class="col my-auto">
-				<img class="py-3" width="100%" src="/images/header-bear.png" alt="">
-			</div>
-		</div>
-	</div>
+<div
+  class="header-primary-banner hidden-print"
+  style="background-image: url('/images/main-banner.svg');">
+  <div class="container">
+    <div class="row my-4">
+      <div class="col my-auto">
+        <h1 class="color-white font-weight-600">State Template V6</h1>
+        <div
+          class="color-white lead m-b-lg line-height-1-6em"
+          style="max-width:22em;">
+          Use the latest version of the template to develop your websites and
+          applications
+        </div>
+        <div class="btn-row p-b">
+          <a href="/download-and-setup.html" class="btn btn-primary">Download and setup</a>
+        </div>
+      </div>
+      <div class="col my-auto">
+        <img class="py-3" width="100%" src="/images/header-bear.png" alt="" />
+      </div>
+    </div>
+  </div>
 </div>
