Update patterns page to include newsroom, article-list, and article page template cards

--- a/src/_includes/layouts/patterns.njk
+++ b/src/_includes/layouts/patterns.njk
@@ -20,7 +20,13 @@
                   </a>
                 </li>
                 {%- for item in patterns.patterns -%}
-                  {%- if 'subnav' in item %}
+                  {% if item.url == '/patterns.html#page-templates' %}
+                    <li>
+                      <a class="bold" href="{{ item.url }}">
+                        {{ item.text }}
+                      </a>
+                    </li>
+                  {%- elif 'subnav' in item %}
                     <li>
                       <a href="{{ item.url }}" {{ helpers.getLinkActiveState(item.url, page.url) | safe }}>
                         {{ item.text }}
