--- a/src/scss/cagov/nav-mobile-controls.scss
+++ b/src/scss/cagov/nav-mobile-controls.scss
@@ -6,7 +6,87 @@
 //
 // MOBILE
 // --------------------------------------------------
+// Hamburger menu to X transition
+.toggle-menu {
+  padding: 16px 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  color: $white;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  color: $white;
+  min-width: 2.5rem;
+  min-height: 2.5rem;
+  margin-top: 1.3rem;
 
+  // Overvriting sr-only class to avoid strucural changes in mobile controls
+
+  span {
+    height: 2px;
+    width: 20px;
+    display: block;
+    position: absolute;
+    border-radius: 5px;
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.25s ease-in-out;
+    -moz-transition: 0.25s ease-in-out;
+    -o-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+
+    &:nth-child(1) {
+      top: 2px;
+    }
+
+    &:nth-child(2),
+    &:nth-child(3) {
+      top: 9px;
+    }
+
+    &:nth-child(4) {
+      top: 16px;
+    }
+  }
+
+  &[aria-expanded="true"] {
+    span:nth-child(1) {
+      top: 12px;
+      width: 0%;
+    }
+
+    span:nth-child(2) {
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+
+    span:nth-child(3) {
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+    }
+
+    span:nth-child(4) {
+      top: 12px;
+      width: 0%;
+    }
+  }
+}
 // CONTAINER
 .mobile-controls {
   text-align: right; // move most menu controls to right
@@ -24,100 +104,6 @@
     padding-left: 16px;
     padding-right: 16px;
     line-height: 2.75rem;
-  }
-
-  // Hamburger menu to X transition
-  .toggle-menu {
-    padding: 16px 8px;
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    color: $white;
-    position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-    color: $white;
-    top: 4px;
-
-    // Overvriting sr-only class to avoid strucural changes in mobile controls
-    span.sr-only {
-      height: unset !important;
-      width: unset !important;
-      position: relative !important;
-      clip: unset !important;
-      background: none !important;
-      color: $gray-600;
-      right: 0 !important;
-      display: inline-block !important;
-      padding-left: 0 !important;
-      top: 10px;
-    }
-
-    span {
-      margin-left: 0.75rem;
-      margin-right: 0;
-      height: 2px;
-      width: 20px;
-      display: block;
-      position: absolute;
-      background: $gray-600;
-      border-radius: 5px;
-      opacity: 1;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      transform: rotate(0deg);
-      -webkit-transition: 0.25s ease-in-out;
-      -moz-transition: 0.25s ease-in-out;
-      -o-transition: 0.25s ease-in-out;
-      transition: 0.25s ease-in-out;
-
-      &:nth-child(1) {
-        top: 2px;
-      }
-
-      &:nth-child(2),
-      &:nth-child(3) {
-        top: 9px;
-      }
-
-      &:nth-child(4) {
-        top: 16px;
-      }
-    }
-
-    &[aria-expanded="true"] {
-      span:nth-child(1) {
-        top: 12px;
-        width: 0%;
-      }
-
-      span:nth-child(2) {
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
-      }
-
-      span:nth-child(3) {
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-      }
-
-      span:nth-child(4) {
-        top: 12px;
-        width: 0%;
-      }
-    }
   }
 
   .toggle-search {
@@ -138,20 +124,6 @@
       font-size: 1.4rem;
       display: block;
       margin: 0 auto;
-    }
-
-    // Overvriting sr-only class to avoid strucural changes in mobile controls
-    span.sr-only {
-      height: unset !important;
-      width: unset !important;
-      position: relative !important;
-      clip: unset !important;
-      background: none !important;
-      color: $gray-600;
-      right: 0 !important;
-      display: inline-block !important;
-      padding-left: 5px !important;
-      bottom: 4px;
     }
 
     &:focus {
@@ -203,7 +175,7 @@
   align-items: center;
   z-index: 1;
   position: relative;
-  top: -75px;
+  top: -3.75rem;
 }
 
 /* mobile controls hack for IE because IE never dies */
