Active styles for buttons

--- a/src/scss/cagov/nav-mobile-controls.scss
+++ b/src/scss/cagov/nav-mobile-controls.scss
@@ -255,7 +255,6 @@ header.nav-overlay {
   }
 }
 
-// IOS Icons FIX
 .main-nav-icons {
   display: flex;
   justify-content: flex-end;
@@ -263,6 +262,8 @@ header.nav-overlay {
   z-index: 1;
   position: relative;
   top: -3.75rem;
+  width: 20%;
+  margin-left: auto;
 }
 
 /* mobile controls hack for IE because IE never dies */
