--- a/src/scss/cagov/navigation.scss
+++ b/src/scss/cagov/navigation.scss
@@ -245,7 +245,7 @@
         color: $black;
         &:hover,
         &:focus {
-          color: $gray-800 !important;
+          color: $gray-800;
           background-color: $gray-100;
         }
         &::before {
