added mobile media query for page navigation columns

--- a/src/scss/cagov/page-navigation.scss
+++ b/src/scss/cagov/page-navigation.scss
@@ -141,6 +141,12 @@
         }
       }
     }
+    @media (max-width: $screen-xxs-max) {
+      &.columns-2,
+      &.columns-3 {
+        columns: 1;
+      }
+    }
   }
 }
 
