--- a/src/scss/cagov/nav-mobile-controls.scss
+++ b/src/scss/cagov/nav-mobile-controls.scss
@@ -11,7 +11,7 @@ header {
   &::after {
     content: "";
     position: absolute;
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.48);
     top: 0;
