adding inline image sizes to improve perf

--- a/src/_includes/modules/branding.html
+++ b/src/_includes/modules/branding.html
@@ -5,7 +5,9 @@
         <img
           src="/images/template-logo.png"
           class="logo-img"
-          alt="State Template Logo" />
+          alt="State Template Logo"
+          width="80"
+          height="44" />
         <div class="logo-text">
           <span class="logo-state">State of California</span>
           <span class="logo-dept">Web Template</span>
