--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -6,6 +6,8 @@
           <a href="https://ca.gov">
             <span class="sr-only">CA.gov</span>
             <img
+              width="32.97"
+              height="24"
               src="/images/Ca-Gov-Logo-Gold.svg"
               class="pos-rel"
               alt=""
