--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -3,7 +3,11 @@
   <div class="container">
     <div class="d-flex">
       <a href="https://ca.gov" class="cagov-logo" target="_blank">
-        <img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov logo" />
+        <img
+          src="/images/Ca-Gov-Logo-Gold.svg"
+          alt="CA.gov logo"
+          width="37.34"
+          height="27.19" />
       </a>
       <ul class="footer-links">
         <li>
