using aspect ratio

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -6,8 +6,7 @@
         <img
           src="/images/Ca-Gov-Logo-Gold.svg"
           alt="CA.gov logo"
-          width="37.34"
-          height="27.19" />
+          style="aspect-ratio: 37.34 / 27.19" />
       </a>
       <ul class="footer-links">
         <li>
