--- a/src/_includes/modules/branding.html
+++ b/src/_includes/modules/branding.html
@@ -6,8 +6,7 @@
           src="/images/template-logo.png"
           class="logo-img"
           alt="State Template Logo"
-          width="80"
-          height="44" />
+          style="aspect-ratio: 80 / 48.17" />
         <div class="logo-text">
           <span class="logo-state">State of California</span>
           <span class="logo-dept">Web Template</span>
