aspect ratios to speed up rendering

--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -12,11 +12,18 @@
           applications
         </div>
         <div class="btn-row p-b">
-          <a href="/download-and-setup.html" class="btn btn-primary">Download and setup</a>
+          <a href="/download-and-setup.html" class="btn btn-primary"
+            >Download and setup</a
+          >
         </div>
       </div>
       <div class="col my-auto">
-        <img class="py-3" width="100%" src="/images/header-bear.png" alt="" />
+        <img
+          class="py-3"
+          width="100%"
+          src="/images/header-bear.png"
+          alt=""
+          style="aspect-ratio: 1146 / 827" />
       </div>
     </div>
   </div>
