--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -114,6 +114,7 @@
               class="p-1"
               height="120px"
               src="/images/idea-icon.svg"
+              style="aspect-ratio: 1"
               alt="" />
           </div>
           <div class="p-a align-self-center">
@@ -137,6 +138,7 @@
               class="p-1"
               height="120px"
               src="/images/feedback-icon.svg"
+              style="aspect-ratio: 1"
               alt="" />
           </div>
 
@@ -160,6 +162,7 @@
             <img
               class="p-1"
               height="120px"
+              style="aspect-ratio: 1"
               src="/images/support-icon.svg"
               alt="" />
           </div>
