--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -9,6 +9,7 @@
             class="p-4"
             height="155px"
             src="/images/pattern-icon.svg"
+            style="aspect-ratio: 1"
             alt="" />
         </div>
 
@@ -34,7 +35,12 @@
       <div class="h-100 bg-gray-100 bg-gray-50-hover pos-rel">
         <div
           class="bg-primary-secondary-gradient p-a d-flex justify-content-center align-items-center">
-          <img class="p-4" height="155px" src="/images/nav-icon.svg" alt="" />
+          <img
+            class="p-4"
+            height="155px"
+            src="/images/nav-icon.svg"
+            style="aspect-ratio: 1"
+            alt="" />
         </div>
 
         <div class="p-a-md">
@@ -62,6 +68,7 @@
             class="p-4"
             height="155px"
             src="/images/refreshed-icon.svg"
+            style="aspect-ratio: 1"
             alt="" />
         </div>
         <div class="p-a-md">
