--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -7,7 +7,10 @@
         <img
           class="img-fluid"
           src="/images/bbfa-example.jpg"
-          alt="Homepage screenshot of Broadband for all website." />
+          width="950"
+          style="aspect-ratio: 950 / 698"
+          alt="Homepage screenshot of Broadband
+        for all website." />
       </div>
 
       <div class="pt-3" style="min-height: 236px;">
@@ -44,6 +47,8 @@
         <img
           class="img-fluid"
           src="/images/caaba-example.jpg"
+          width="950"
+          style="aspect-ratio: 950 / 698"
           alt="Homepage screenshot of California's Abortion Access Portal website." />
       </div>
 
